[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv="0.15.0"
log = { version = "0.4", features = ["std", "serde"] }
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version =  "1.8", features = ["full"] }
serde = {version = "1.0.138", features = ["derive"]}
