[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv="0.15.0"
log = { version = "0.4", features = ["std", "serde"] }
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["full"] }
teloxide = { version = "0.9.2", features = ["full"] }
lazy_static = "1.4.0"
serde = "1.0.139"
serde_json = "1.0"
xlsxwriter = "0.3.5"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
